Created reusable components for business list view and added basic MaterialUI styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,10 @@
-.App {
+/* .App {
   text-align: center;
+  background-color: #fbe8a6;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #fbe8a6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -15,4 +16,4 @@
 
 .App-link {
   color: #61dafb;
-}
+} */
